# restream-cli

./: AGENTS.md  README.md  pyproject.toml
.github/workflows/: claude.yml  pypi-publish.yml  test.yml
src/restream_io/: api.py  auth.py  cli.py  config.py  errors.py  schemas.py  utils.py  websocket.py
src/restream_io/schemas/: ChatEvent.py  StreamingEvent.py  __init__.py
tests/: conftest.py  test_api_enhanced.py  test_auth.py  test_channel.py  test_channel_management.py  test_cli_channel.py  test_cli_event.py  test_cli_event_additional.py  test_cli_event_get.py  test_cli_profile.py  test_cli_stream_key.py  test_config.py  test_event.py  test_platforms_servers.py  test_profile.py  test_schemas_integration.py  test_utils.py  test_version.py  test_websocket.py
